# rust-meme-no5

./: Cargo.toml
src/: main.rs
